JSpring4/JSpring4-web/src/main/webapp/WEB-INF/info/server/centos/iptables.txt
# vi /etc/sysconfig/iptables
-----------------------------------------------------------------------------------------------------------------------
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m tcp -p tcp -s 192.168.0.0/24 --dport 22 -j ACCEPT
-A INPUT -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m tcp -p tcp -s 192.168.0.100 --dport 21 -j ACCEPT
-A INPUT -m tcp -p tcp --dport 25 -j ACCEPT
-A INPUT -m tcp -p tcp -s 192.168.0.100 --dport 3306 -j ACCEPT
-A INPUT -m tcp -p tcp -s 192.168.0.100 --dport 3690 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
-----------------------------------------------------------------------------------------------------------------------


# /etc/init.d/iptables restart

# systemctl restart iptables

# 상태보기
# iptables -L
